// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client > reducers > user should handle default state 1`] = `Object {}`;

exports[`client > reducers > user should handle log out 1`] = `Object {}`;

exports[`client > reducers > user should handle set auth0 user 1`] = `
Object {
  "id": 1,
}
`;

exports[`client > reducers > user should handle set id token 1`] = `
Object {
  "idToken": "abcd",
}
`;
